--- a/PM.html
+++ b/PM.html
@@ -22,19 +22,21 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/OA/bg.png') no-repeat;background-size: 100% 100%;">
+        <div class="content" style="background: url('./images/PM/bg.png') no-repeat;background-size: 100% 100%;">
             <div class="content_title_box">
-                <div class="content_title">
-                    <h2>云创智慧</h2>
-                    <h2>OA系统</h2>
-                    <p>全面解决办公协同需求<br />支撑部门高效协作</p>
+                <div class="content_title" style="right: 160px">
+                    <h2>云创PM</h2>
+                    <h2>项目管理系统</h2>
+                    <p>
+                        提升组织效能，团队活力又高效
+                    </p>
                     <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
                 </div>
             </div>
         </div>
         <div class="carousel_bg">
-            <h2 class="primary">让协同办公简单高效</h2>
-            <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
+            <h2 class="primary">持续优化的协同项目管理</h2>
+            <p>转为企业协作办公场景而设计，专注提升办公和管理效率，为企业节约管理成本，进而提升企业核心竞争力。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
@@ -49,8 +51,8 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
-            <h2 class="primary">体验智慧办公新模式</h2>
-            <p>整合日程管理、移动审批、考勤、汇报、采购等功能于一体，实现组织全流程高效协作，工作管理更流畅，沟通协作更轻松。</p>
+            <h2 class="primary">每一个项目更简单高效</h2>
+            <p>实现沟通、计划、分析、立项、文档等全面管理，项目过程可视化、流程化、自动化、满足个性化得、优化的项目管理需求。</p>
             <script>
                 var mySwiper = new Swiper('.swiper-container', {
                     // direction: 'vertical', // 垂直切换选项
@@ -74,76 +76,83 @@
         </div>
         <div class="OA_detail_container">
             <div class="OA_detail"
-                style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 80% 100%;">
-                <div class="OA_card">
+                style="background: url('./images/index/reserve.png') no-repeat 0% 0%;background-size: 80% 100%;">
+                <div class="OA_card OA_reverse">
                     <div class="OA_card_left">
-                        <img src="images/OA/left1.png">
-                        <h2 class="OA_title">日程汇总</h2>
-                        <p class="OA_subtitle">时间管理更有效</p>
-                        <p class="OA_content">设置智能提醒功能，临近日程提 醒处理，时间管理有效可控。 </p>
+                        <img src="images/PM/left1.png">
+                        <h2 class="OA_title">立项管理</h2>
+                        <p class="OA_subtitle">目标明确更顺畅</p>
+                        <p class="OA_content">
+                            规范化管理立项流程，项目责任人可
+                            实时追踪项目信息，项目分析更方便
+                        </p>
                     </div>
                     <div>
-                        <img src="images/OA/right1.png">
+                        <img src="images/PM/right1.png">
                     </div>
                 </div>
 
-                <div class="OA_card">
+                <div class="OA_card OA_reverse">
                     <div>
-                        <img src="images/OA/right2.png">
+                        <img src="images/PM/right2.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left2.png">
-                        <h2 class="OA_title">节点提醒</h2>
-                        <p class="OA_subtitle">审批流程更快捷</p>
+                        <img src="images/PM/left2.png">
+                        <h2 class="OA_title">计划管理</h2>
+                        <p class="OA_subtitle">任务进度有掌控</p>
                         <p class="OA_content">
-                            高效跟踪审批执行过程，节点
-                            催办，提升组织人效。
+
+                            可将任务分类，整体把控项目计划
+                            实时掌握任务进度，解决延误短板
+
                         </p>
                     </div>
 
                 </div>
-                <div class="OA_card">
+                <div class="OA_card OA_reverse">
                     <div class="OA_card_left">
-                        <img src="images/OA/left3.png">
-                        <h2 class="OA_title">简化考勤</h2>
-                        <p class="OA_subtitle">月末统计无烦恼</p>
+                        <img src="images/PM/left3.png">
+                        <h2 class="OA_title">数据分析</h2>
+                        <p class="OA_subtitle">报表展示更直观</p>
                         <p class="OA_content">
-                            自动生成考勤报表，汇总统
-                            计更方便，考勤管理更轻松。
+                            可利用甘特图提供项目进度详细视图
+                            还可通过报表查看人员任务量情况 
                         </p>
                     </div>
                     <div class="OA_card_right">
-                        <img src="images/OA/right3.png">
+                        <img src="images/PM/right3.png">
                     </div>
                 </div>
-                <div class="OA_card">
+                <div class="OA_card OA_reverse">
                     <div>
-                        <img src="images/OA/right4.png">
+                        <img src="images/PM/right4.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left4.png">
-                        <h2 class="OA_title">标准模板</h2>
-                        <p class="OA_subtitle">工作汇报更规范</p>
+                        <img src="images/PM/left4.png">
+                        <h2 class="OA_title">即时沟通</h2>
+                        <p class="OA_subtitle">在线讨论更高效</p>
                         <p class="OA_content">
-                            可设置工作进度，汇报高效
-                            更规范，工作成果一目了然。
+                            
+                                专为工作场景打造的企业即时沟通工具
+                                成员之间保持实时联系，随时协调工作
+                                                        
                         </p>
                     </div>
 
                 </div>
-                <div class="OA_card">
-
+                <div class="OA_card OA_reverse">
                     <div class="OA_card_left">
-                        <img src="images/OA/left5.png">
-                        <h2 class="OA_title">线上采购</h2>
-                        <p class="OA_subtitle">流程追溯有保障</p>
+                        <img src="images/PM/left5.png">
+                        <h2 class="OA_title">文档共享</h2>
+                        <p class="OA_subtitle">分享协作更方便</p>
                         <p class="OA_content">
-                            灵活的费用、预算管理规则设
-                            置，满足企业个性化管理需求。
+                                确保团队成员随时获取项目文件最新
+                                版本，还可对文档、演示文稿和表格
+                                进行协同编辑
                         </p>
                     </div>
                     <div>
-                        <img src="images/OA/right5.png">
+                        <img src="images/PM/right5.png">
                     </div>
                 </div>
             </div>
