--- a/index.html
+++ b/index.html
@@ -21,52 +21,22 @@
 
 <body>
     <div class="contianer">
-        <div class="header">
-            <div class="logo_box">
-                <img src="./images/OA/logo.png">
-            </div>
-            <ul class="menu_box">
-                <li class="">
-                    <a href="">首页</a>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">产品</a>
-                    <ul class="hover_menu">
-                        <li><a href="#">OA</a></li>
-                        <li><a href="#">CRM</a></li>
-                        <li><a href="#">HRM</a></li>
-                        <li><a href="#">PM</a></li>
-                        <li><a href="#">企业培训</a></li>
-                    </ul>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">解决方案</a>
-                    <ul class="hover_menu">
-                        <li><a href="#">制造业</a></li>
-                        <li><a href="#">服装业</a></li>
-                        <li><a href="#">地产业</a></li>
-                        <li><a href="#">商贸业</a></li>
-                    </ul>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">服务与支持</a>
-                    <i class="blue_border"></i>
-                </li>
-                <li class="">
-                    <a href="">关于云创办公</a>
-                    <i class="blue_border"></i>
-                </li>
-            </ul>
-            <div class="phone">
-                <a class="primary">免费试用</a>
-                <p class="primary"><i></i>400-645-6677</p>
-            </div>
+        <div id="header" class="header">
+
         </div>
         <div class="banner_box">
             <div class="banner">
+                <div class="content_title_box">
+                    <div class="content_title" style="right:0;width: 520px;">
+                        <h2>智能企业工作平台</h2>
+                        <h2 style="font-size: 32px">一个平台，让办公立马简单</h2>
+                        <p style="white-space: normal;">云创办公是集工作沟通，办公软件集成、数据分析等功能为一体的智能化办公软件服务系统平台 </p>
+                        <div class="header_input">
+                            <input type="text" class="input_kw">
+                            <a href="" class="input_btn">免费体验<i class="input_jiantou"></i></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="yuan">
                     <div class="neiyuan">
                         <div id="yuan1"><a href="#"><img src="images/index/OA@2x.png"></a></div>
@@ -97,33 +67,43 @@
                 <div class="progress_r">
                     <ul class="fenduan">
                         <li>
-                            <div class="" style="position: relative; left: -2px;">
-                                <div class="huakuai">
+                            <div class="huankuai_box">
+                                <div class="huankuai_btn" style="position: relative; left: -2px;">
+                                    <div class="huakuai">
+                                    </div>
                                 </div>
                             </div>
                             <i class="baitiao"></i>
                         </li>
                         <li>
-                            <div class="huankuai_btn" style="position: relative; left: -1px;">
-                                <div class="huakuai"></div>
+                            <div class="huankuai_box">
+                                <div class="huankuai_btn" style="position: relative; left: -1px;">
+                                    <div class="huakuai"></div>
+                                </div>
                             </div>
                             <i class="baitiao" style="width: 0"></i>
                         </li>
                         <li>
-                            <div class="">
-                                <div class=""></div>
+                            <div class="huankuai_box">
+                                <div class="huankuai_btn">
+                                    <div class="huakuai"></div>
+                                </div>
                             </div>
                             <i class="baitiao" style="width: 0"></i>
                         </li>
                         <li>
-                            <div class="" style="position: relative; left: 1px;">
-                                <div class=""></div>
+                            <div class="huankuai_box">
+                                <div class="huankuai_btn" style="position: relative; left: 1px;">
+                                    <div class="huakuai"></div>
+                                </div>
                             </div>
                             <i class="baitiao" style="width: 0"></i>
                         </li>
                         <li>
-                            <div class="" style="position: relative; left: 2px;">
-                                <div class=""></div>
+                            <div class="huankuai_box">
+                                <div class="huankuai_btn" style="position: relative; left: 2px;">
+                                    <div class="huakuai"></div>
+                                </div>
                             </div>
                             <i class="baitiao" style="width: 0"></i>
                         </li>
@@ -226,12 +206,21 @@
             <div class="industry">
                 <div class="industry_img">
                     <img src="./images/index/hangye1.jpg">
-                    <img src="./images/index/hangye2.jpg">
-                    <img src="./images/index/hangye3.jpg">
-                    <img src="./images/index/hangye4.jpg">
+                    <div class="industry_content">
+                        <h2 class="i_t">
+                            大数据驱动智能营销
+                            从现在预见未来
+                        </h2>
+                        <p class="i_c">
+                            云创办公全渠道智能服务，将日常所有运营
+                            数据进行系统整理、记录、分析，以直观的形式
+                            展现给用户各种商业数据让数据价值清晰可见。
+                        </p>
+                        <a href="#" class="i_btn">了解更多</a>
+                    </div>
                 </div>
                 <div class="industry_btn">
-                    <div class="btn_show">地产行业 <i></i></i></div>
+                    <div class="btn_show">地产行业 <i></i></div>
                     <div class="">制造行业 <i></i></div>
                     <div class="">商贸行业 <i></i></div>
                     <div class="">服装行业 <i></i></div>
@@ -242,7 +231,7 @@
         <div class="pattern_box" style="margin-top: 120px;margin-bottom: 104px;">
             <h2 class="index_title">云创办公-提升企业运营“格局”</h2>
             <div class="pattern">
-                <div class="pattern_left" style=" background: url('./images/index/geju_bg.png');">
+                <div class="pattern_left">
                     <h2>传统企业系统</h2>
                     <img src="./images/index/geju1.png">
                     <div>
@@ -254,111 +243,18 @@
                 <i class="shuxian"></i>
                 <div class="pattern_left">
                     <h2>传统企业系统</h2>
-                    <img src="./images/index/geju1.png">
+                    <img src="./images/index/geju2.png">
                     <div>
-                        <p>多套系统，管理多杂乱无章</p>
-                        <p>信息障碍，员工对接时效差</p>
-                        <p>管理困难，人工耗损成本高</p>
+                        <p>一个平台，所有系统统一管理</p>
+                        <p>整合业务模块，减少沟通成本</p>
+                        <p>平台数据打通，辅助管理决策</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="brand_container">
-            <div class="brand">
-                <h2 class="primary" style="color: #000;margin-bottom: 15px">超过30万家企业使用云创办公</h2>
-                <p>行业深耕，专业解决全流程、全周期办公需求，驱动企业数据化管理进程，实现高效自由的业务模式。</p>
-                <div class="brand_content">
-                    <img src="./images/OA/brand1.png" alt="">
-                </div>
-                <div class="brand_btn">
-                    <ul>
-                        <li>
-                            <img src="./images/index/btn1.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn2.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn3.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn4.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn5.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn6.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn7.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn8.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn9.png" alt="">
-                        </li>
-                        <li>
-                            <img src="./images/index/btn10.png" alt="">
-                        </li>
-                    </ul>
-                </div>
-                <script>
-                    $(".brand_btn ul li").on('click', function () {
-                        var i = $(this).index() + 1
-                        $($('.brand_content').children()[0]).attr('src', './images/OA/brand' + i + '.png')
-                    })
-                </script>
-                <div style="margin-top: 60px">
-                    <h2 class="primary" style="color: #000;margin-bottom: 15px">超过30万家企业使用云创办公</h2>
-                    <p>行业深耕，专业解决全流程、全周期办公需求，驱动企业数据化管理进程，实现高效自由的业务模式。</p>
-                    <a class=" tiyan_btn bg_primary" href="#" style="color: #fff;margin-top: 45px">免费体验</a>
-                </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="footer_detail">
-                <ul class="fun">
-                    <li><a href="#">功能</a></li>
-                    <li><a href="#">日程管理</a></li>
-                    <li><a href="#">移动审批</a></li>
-                    <li><a href="#">考勤打卡</a></li>
-                    <li><a href="#">工作汇报</a></li>
-                    <li><a href="#">物资采购</a></li>
-                </ul>
-                <ul class="fun">
-                    <li><a href="#">行业解决方案</a></li>
-                    <li><a href="#">地产业</a></li>
-                    <li><a href="#">服装业</a></li>
-                    <li><a href="#">制造业</a></li>
-                    <li><a href="#">商贸业</a></li>
-                </ul>
-                <ul class="fun">
-                    <li><a href="#">客户案例</a></li>
-                    <li><a href="#">产品定制</a></li>
-                    <li><a href="#">加盟合作</a></li>
-                </ul>
-                <ul class="fun">
-                    <li><a href="#">联系我们</a></li>
-                    <li><a href="#">400-645-667</a></li>
-                </ul>
-                <ul class="fun">
-                    <li><a href="#">关于我们</a></li>
-                    <li><a href="#">微信公众号</a></li>
-                    <li><img src="./images/OA/erweima.png"></li>
-                </ul>
-            </div>
-            <div class="record">
-                <div style="padding-right: 24px">
-                    <img src="./images/OA/logo.png">
-                </div>
-                <div class="rec">
-                    <p>Copyright &copy; 2018 青岛云创智能集团有限公司 版权所有 </p>
-                    <p>公司地址：山东省青岛市市北区龙城路31号卓越世纪中心4号楼6L</p>
-                </div>
-            </div>
+        <div id="footer">
+
         </div>
     </div>
 </body>
