--- a/study.html
+++ b/study.html
@@ -22,25 +22,24 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/OA/bg.png') no-repeat;background-size: 100% 100%;">
+        <div class="content" style="background: url('./images/study/bg.png') no-repeat;background-size: 100% 100%;">
             <div class="content_title_box">
                 <div class="content_title">
-                    <h2>云创智慧</h2>
-                    <h2>OA系统</h2>
-                    <p>全面解决办公协同需求<br />支撑部门高效协作</p>
+                    <h2>云创企业培训平台</h2>
+                    <p>一个学习型企业的标配</p>
                     <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
                 </div>
             </div>
         </div>
         <div class="carousel_bg">
-            <h2 class="primary">让协同办公简单高效</h2>
-            <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
+            <h2 class="primary">让每一家企业都有自己的商学院</h2>
+            <p>丰富的课程资源，多元的学习入口，场景化得学习社区，全面加速企业人才培训和绩效转化，让企业都拥有专属商学院。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/OA/OA1.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA2.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA3.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/study/OA1.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/study/OA2.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/study/OA3.png" alt="" width="100%" height="100%"></div>
                 </div>
                 <!-- 如果需要分页器 -->
                 <div class="swiper-pagination"></div>
@@ -49,8 +48,8 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
-            <h2 class="primary">体验智慧办公新模式</h2>
-            <p>整合日程管理、移动审批、考勤、汇报、采购等功能于一体，实现组织全流程高效协作，工作管理更流畅，沟通协作更轻松。</p>
+            <h2 class="primary">一站式企业学习平台</h2>
+            <p>实现全网在线学习与培训管理，满足企业个性化培训需求，有效沉淀企业知识，帮助企业构建一站式学习平台</p>
             <script>
                 var mySwiper = new Swiper('.swiper-container', {
                     // direction: 'vertical', // 垂直切换选项
@@ -77,56 +76,65 @@
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 80% 100%;">
                 <div class="OA_card">
                     <div class="OA_card_left">
-                        <img src="images/OA/left1.png">
-                        <h2 class="OA_title">日程汇总</h2>
-                        <p class="OA_subtitle">时间管理更有效</p>
-                        <p class="OA_content">设置智能提醒功能，临近日程提 醒处理，时间管理有效可控。 </p>
+                        <img src="images/study/left1.png">
+                        <h2 class="OA_title">课程管理</h2>
+                        <p class="OA_subtitle">强大丰富的课程内容</p>
+                        <p class="OA_content">
+                            汇集各行业近千门丰富课程，还有强
+                            大的讲师资源，培训内容价值更高
+                        </p>
                     </div>
                     <div>
-                        <img src="images/OA/right1.png">
+                        <img src="images/study/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card">
                     <div>
-                        <img src="images/OA/right2.png">
+                        <img src="images/study/right2.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left2.png">
-                        <h2 class="OA_title">节点提醒</h2>
-                        <p class="OA_subtitle">审批流程更快捷</p>
+                        <img src="images/study/left2.png">
+                        <h2 class="OA_title">直播课程</h2>
+                        <p class="OA_subtitle">随时随地轻松学习</p>
                         <p class="OA_content">
-                            高效跟踪审批执行过程，节点
-                            催办，提升组织人效。
+
+                            直播实时互动，覆盖培训学习全场景，
+                            课程内容还可留存，直接生成微课
+
                         </p>
                     </div>
 
                 </div>
                 <div class="OA_card">
                     <div class="OA_card_left">
-                        <img src="images/OA/left3.png">
-                        <h2 class="OA_title">简化考勤</h2>
-                        <p class="OA_subtitle">月末统计无烦恼</p>
+                        <img src="images/study/left3.png">
+                        <h2 class="OA_title">学习社区</h2>
+                        <p class="OA_subtitle">互动分享更有趣</p>
                         <p class="OA_content">
-                            自动生成考勤报表，汇总统
-                            计更方便，考勤管理更轻松。
+
+                            社交化的知识分享，沉淀员工潜在知
+                            识，加速优质知识在组织内的高效传播
+
                         </p>
                     </div>
                     <div class="OA_card_right">
-                        <img src="images/OA/right3.png">
+                        <img src="images/study/right3.png">
                     </div>
                 </div>
                 <div class="OA_card">
                     <div>
-                        <img src="images/OA/right4.png">
+                        <img src="images/study/right4.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left4.png">
-                        <h2 class="OA_title">标准模板</h2>
-                        <p class="OA_subtitle">工作汇报更规范</p>
+                        <img src="images/study/left4.png">
+                        <h2 class="OA_title">学习管理</h2>
+                        <p class="OA_subtitle">学分激励有动力</p>
                         <p class="OA_content">
-                            可设置工作进度，汇报高效
-                            更规范，工作成果一目了然。
+
+                            游戏式学习激励，让学习更有趣，设
+                            置学分排行榜，课程学习更有动力
+
                         </p>
                     </div>
 
@@ -134,16 +142,16 @@
                 <div class="OA_card">
 
                     <div class="OA_card_left">
-                        <img src="images/OA/left5.png">
-                        <h2 class="OA_title">线上采购</h2>
-                        <p class="OA_subtitle">流程追溯有保障</p>
+                        <img src="images/study/left5.png">
+                        <h2 class="OA_title">学习中心</h2>
+                        <p class="OA_subtitle"> 学习管理更有效率</p>
                         <p class="OA_content">
-                            灵活的费用、预算管理规则设
-                            置，满足企业个性化管理需求。
+                            设置学习记录、课程笔记，任务管理等功
+                            能，灵活管理学习进度，学习直观更有效
                         </p>
                     </div>
                     <div>
-                        <img src="images/OA/right5.png">
+                        <img src="images/study/right5.png">
                     </div>
                 </div>
             </div>
