--- a/HRM.html
+++ b/HRM.html
@@ -22,25 +22,27 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/OA/bg.png') no-repeat;background-size: 100% 100%;">
+        <div class="content" style="background: url('./images/HRM/bg.png') no-repeat;background-size: 100% 100%;">
             <div class="content_title_box">
                 <div class="content_title">
-                    <h2>云创智慧</h2>
-                    <h2>OA系统</h2>
-                    <p>全面解决办公协同需求<br />支撑部门高效协作</p>
+                    <h2>云创HRM</h2>
+                    <h2>人力资源管理系统</h2>
+                    <p>
+                        以员工为中心
+                        <br />建立完善的员工管理服务体系</p>
                     <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
                 </div>
             </div>
         </div>
         <div class="carousel_bg">
-            <h2 class="primary">让协同办公简单高效</h2>
-            <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
+            <h2 class="primary">一站式人事管理服务平台</h2>
+            <p>通过云创HRM助您管理人+事，发挥企业最核心资源-人力的最大价值，改善员工体验，提升人力资源管理效率。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="images/OA/OA1.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA2.png" alt="" width="100%" height="100%"></div>
-                    <div class="swiper-slide"><img src="images/OA/OA3.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/HRM/OA1.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/HRM/OA2.png" alt="" width="100%" height="100%"></div>
+                    <div class="swiper-slide"><img src="images/HRM/OA3.png" alt="" width="100%" height="100%"></div>
                 </div>
                 <!-- 如果需要分页器 -->
                 <div class="swiper-pagination"></div>
@@ -49,8 +51,8 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-button-next"></div>
             </div>
-            <h2 class="primary">体验智慧办公新模式</h2>
-            <p>整合日程管理、移动审批、考勤、汇报、采购等功能于一体，实现组织全流程高效协作，工作管理更流畅，沟通协作更轻松。</p>
+            <h2 class="primary">高效能人力资源管理模式</h2>
+            <p>通过员工招聘、员工信息、薪酬福利、培训、绩效管理等应用，帮助企业HR实现全员工全任职周期的一站式人事管理，有效提升HR管理效能、降低人事成本</p>
             <script>
                 var mySwiper = new Swiper('.swiper-container', {
                     // direction: 'vertical', // 垂直切换选项
@@ -77,56 +79,65 @@
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 80% 100%;">
                 <div class="OA_card">
                     <div class="OA_card_left">
-                        <img src="images/OA/left1.png">
-                        <h2 class="OA_title">日程汇总</h2>
-                        <p class="OA_subtitle">时间管理更有效</p>
-                        <p class="OA_content">设置智能提醒功能，临近日程提 醒处理，时间管理有效可控。 </p>
+                        <img src="images/HRM/left1.png">
+                        <h2 class="OA_title">智能招聘</h2>
+                        <p class="OA_subtitle">流程灵活可追踪</p>
+                        <p class="OA_content">
+                            智能地解析、查找、过滤并共享简历，可
+                            跟踪招聘进度，招聘更有效率。
+                        </p>
                     </div>
                     <div>
-                        <img src="images/OA/right1.png">
+                        <img src="images/HRM/right1.png">
                     </div>
                 </div>
 
                 <div class="OA_card">
                     <div>
-                        <img src="images/OA/right2.png">
+                        <img src="images/HRM/right2.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left2.png">
-                        <h2 class="OA_title">节点提醒</h2>
-                        <p class="OA_subtitle">审批流程更快捷</p>
+                        <img src="images/HRM/left2.png">
+                        <h2 class="OA_title">信息管理</h2>
+                        <p class="OA_subtitle">用工风险透明化</p>
                         <p class="OA_content">
-                            高效跟踪审批执行过程，节点
-                            催办，提升组织人效。
+
+                            员工关键信息在线管理，准确记录
+                            所有员工信息并实现有效管控。
+
                         </p>
                     </div>
 
                 </div>
                 <div class="OA_card">
                     <div class="OA_card_left">
-                        <img src="images/OA/left3.png">
-                        <h2 class="OA_title">简化考勤</h2>
-                        <p class="OA_subtitle">月末统计无烦恼</p>
+                        <img src="images/HRM/left3.png">
+                        <h2 class="OA_title">智能薪酬</h2>
+                        <p class="OA_subtitle">高效算薪更安全</p>
                         <p class="OA_content">
-                            自动生成考勤报表，汇总统
-                            计更方便，考勤管理更轻松。
+
+                            支持多种格式的数据表导入，多维度
+                            数据智能分析，薪酬管理更安全。
+
                         </p>
                     </div>
                     <div class="OA_card_right">
-                        <img src="images/OA/right3.png">
+                        <img src="images/HRM/right3.png">
                     </div>
                 </div>
                 <div class="OA_card">
                     <div>
-                        <img src="images/OA/right4.png">
+                        <img src="images/HRM/right4.png">
                     </div>
                     <div class="OA_card_left">
-                        <img src="images/OA/left4.png">
-                        <h2 class="OA_title">标准模板</h2>
-                        <p class="OA_subtitle">工作汇报更规范</p>
+                        <img src="images/HRM/left4.png">
+                        <h2 class="OA_title">员工培训</h2>
+                        <p class="OA_subtitle">能力提升有成效</p>
                         <p class="OA_content">
-                            可设置工作进度，汇报高效
-                            更规范，工作成果一目了然。
+
+                            线上可完成调研、通知、组织、培训、考
+                            核等全流程培训管理，省时又省力。
+
                         </p>
                     </div>
 
@@ -134,16 +145,18 @@
                 <div class="OA_card">
 
                     <div class="OA_card_left">
-                        <img src="images/OA/left5.png">
-                        <h2 class="OA_title">线上采购</h2>
-                        <p class="OA_subtitle">流程追溯有保障</p>
+                        <img src="images/HRM/left5.png">
+                        <h2 class="OA_title">绩效管理</h2>
+                        <p class="OA_subtitle">考核方式更透明</p>
                         <p class="OA_content">
-                            灵活的费用、预算管理规则设
-                            置，满足企业个性化管理需求。
+
+                            为员工设定绩效目标，全面收集反馈
+                            并进行考核，提升绩效管理方式。
+
                         </p>
                     </div>
                     <div>
-                        <img src="images/OA/right5.png">
+                        <img src="images/HRM/right5.png">
                     </div>
                 </div>
             </div>
